data/gcp/codeparrot-large-tf/network-firewall/sample-39/main.tf
terraform {
  required_providers {
    google = {
      source = "hashicorp/google"
    }
  }
}

# google provider block with only region set to europe north1
provider "google" {
}

# create compute network, give it a name and auto create subnetworks
resource "google_compute_network" "name_0" {
  name = "my-network"
}

# create compute firewall, give it the name test-firewall. Use the compute network name, allow protocol icmp, also allow tcp in ports 80, 8080 and 1000-2000. Use source tags web, ssh, and https web. Use target tags.
resource "google_compute_firewall" "name_1" {
  name = "my-firewall"
  network = "default"
  allow {
    protocol = "icmp"
  }
  allow {
    protocol = "tcp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "icmp"
  }
  allow {
    protocol = "esp"
  }
  allow {
    protocol = "ah"
  }
  allow {
    protocol = "sctp"
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "sctp"
  }
  allow {
    protocol = "ah"
  }
  allow {
    protocol = "sctp"
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "sctp"
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "sctp"
  }
  allow {
    protocol = "sctp"
  }
  allow {
    protocol = "tcp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "tcp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "icmp"
  }
  allow {
    protocol = "esp"
  }
  allow {
    protocol = "ah"
  }
  allow {
    protocol = "sctp"
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "tcp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "icmp"
  }
  allow {
    protocol = "esp"
  }
  allow {
    protocol = "ah"
  }
  allow {
    protocol = "sctp"
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "tcp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
  allow {
    protocol = "sctp"
  }
  allow {
    protocol = "ah"
  }
  allow {
    protocol = "sctp"
  }
  allow {
    protocol = "udp"
    ports = ["80", "8080", "1000-2000"]
  }
 
}
